<resources>
    <string name="app_name">AnimeAPI</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="auth">Для авторизации введите логин и пароль в форму ниже</string>
    <string name="enterLogin">Введите логин</string>
    <string name="enterPassword">Введите пароль</string>
    <string name="logout">Выйти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="cancel">Отмена</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>