...
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.548" />

        <EditText
            android:id="@+id/search_field"
            android:layout_width="333dp"
            android:layout_height="44dp"
            android:ems="10"
            android:hint="Введите название"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
...
